--- a/index.html
+++ b/index.html
@@ -554,12 +554,12 @@
         UpperA: [
             { name: 'Supino Inclinado com Halteres', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Peito' },
             { name: 'Supino Reto com Halteres', sets: 4, reps: '8-12', rest: 120, targetMuscle: 'Peito' },
-            { name: 'Supino Reto Sentado', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Peito' },
-            { name: 'Crucifixo Máquina ou Crossover', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Peito' },
-            { name: 'Desenvolvimento Militar', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Ombros' },
-            { name: 'Elevação Lateral com Halteres', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Ombros' },
-            { name: 'Crucifixo Inverso', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Ombros' },
-            { name: 'Cardio', sets: 1, reps: '99', rest: 600, targetMuscle: 'Cardio' },
+            { name: 'Crucifixo Máquina', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Peito' },
+            { name: 'Crossover (Polia Alta)', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Peito' },
+            { name: 'Rosca Direta com Barra', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Bíceps' },
+            { name: 'Rosca Inclinada com Halteres', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Bíceps' },
+            { name: 'Rosca Scot', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Bíceps' },
+            { name: 'Cardio', sets: 1, reps: '1', rest: 30, targetMuscle: 'Cardio' },
         ],
         LowerA: [
             { name: 'Cadeira Extensora', sets: 4, reps: '12-15', rest: 120, targetMuscle: 'Pernas' },
@@ -569,7 +569,7 @@
             { name: 'Cadeira Flexora', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
             { name: 'Stiff', sets: 3, reps: '10-12', rest: 60, targetMuscle: 'Pernas' },
             { name: 'Panturrilha em Pé', sets: 5, reps: '15-20', rest: 60, targetMuscle: 'Panturrilhas' },
-            { name: 'Prancha', sets: 3, reps: '99', rest: 60, targetMuscle: 'Abdominal' },
+            { name: 'Prancha', sets: 4, reps: '99', rest: 60, targetMuscle: 'Abdominal' },
         ],
         UpperB: [
             { name: 'Puxada Alta (Pulldown)', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
@@ -578,16 +578,16 @@
             { name: 'Remada Cavalinho Pegada Aberta', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
             { name: 'Pullover na Polia Alta', sets: 4, reps: '12-15', rest: 90, targetMuscle: 'Costas' },
             { name: 'Hiperextensão Lombar (Banco Romano)', sets: 3, reps: '15', rest: 60, targetMuscle: 'Costas' },
-            { name: 'Cardio', sets: 1, reps: '99', rest: 600, targetMuscle: 'Cardio' },
+            { name: 'Cardio', sets: 1, reps: '1', rest: 30, targetMuscle: 'Cardio' },
         ],
         UpperC: [
-            { name: 'Rosca Direta com Barra', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Bíceps' },
-            { name: 'Rosca Inclinada com Halteres', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Bíceps' },
-            { name: 'Rosca Scot', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Bíceps' },
             { name: 'Tríceps Inverso', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Tríceps' },
             { name: 'Tríceps Frances', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Tríceps' },
             { name: 'Tríceps nas Paralelas', sets: 4, reps: '12', rest: 60, targetMuscle: 'Tríceps' },
-            { name: 'Prancha', sets: 3, reps: '99', rest: 60, targetMuscle: 'Abdominal' },
+            { name: 'Desenvolvimento Militar', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Ombros' },
+            { name: 'Elevação Lateral com Halteres', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Ombros' },
+            { name: 'Crucifixo Inverso', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Ombros' },
+            { name: 'Prancha', sets: 4, reps: '99', rest: 60, targetMuscle: 'Abdominal' },
         ]
     };
 
