--- a/index.html
+++ b/index.html
@@ -567,13 +567,13 @@
             { name: 'Leg Press 45º', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
             { name: 'Cadeira Abdutora', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
             { name: 'Cadeira Flexora', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
-            { name: 'Stiff', sets: 3, reps: '10-12', rest: 60, targetMuscle: 'Pernas' },
+            { name: 'Stiff', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Pernas' },
             { name: 'Panturrilha em Pé', sets: 5, reps: '15-20', rest: 60, targetMuscle: 'Panturrilhas' },
-            { name: 'Prancha', sets: 4, reps: '99', rest: 60, targetMuscle: 'Abdominal' },
+            { name: 'Prancha', sets: 4, reps: '1', rest: 60, targetMuscle: 'Abdominal' },
         ],
         UpperB: [
-            { name: 'Puxada Alta (Pulldown)', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
-            { name: 'Puxada Articulada ou Triângulo', sets: 3, reps: '10-12', rest: 60, targetMuscle: 'Costas' },
+            { name: 'Puxada Alta', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
+            { name: 'Puxada Articulada ou Triângulo', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Costas' },
             { name: 'Remada Curvada', sets: 4, reps: '8-10', rest: 60, targetMuscle: 'Costas' },
             { name: 'Remada Cavalinho Pegada Aberta', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
             { name: 'Pullover na Polia Alta', sets: 4, reps: '12-15', rest: 90, targetMuscle: 'Costas' },
@@ -587,7 +587,7 @@
             { name: 'Desenvolvimento Militar', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Ombros' },
             { name: 'Elevação Lateral com Halteres', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Ombros' },
             { name: 'Crucifixo Inverso', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Ombros' },
-            { name: 'Prancha', sets: 4, reps: '99', rest: 60, targetMuscle: 'Abdominal' },
+            { name: 'Prancha', sets: 4, reps: '1', rest: 60, targetMuscle: 'Abdominal' },
         ]
     };
 
